[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mayhem-cluster"
version = "0.1.0"
description = "Distributed autonomous failover cluster"
requires-python = ">=3.11"

dependencies = [
    "flask",
    "requests"
]

[tool.setuptools]
packages = ["cluster"]
